# VkGPGPU

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  RelWithDebInfo.cap  format.py  two_guns_and_floors.scene
.github/workflows/: clang_pipeline.yml  gnu_pipeline.yml
App/: .gitignore  CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  Default.scene  ShadowTest.scene  Simulation.scene  Subcube_Subsphere.scene  Test.scene  TwoCerberus.scene  guns_and_point_lights.scene  imgui.ini  main.cpp  test.scene  timings.txt  two_guns_and_walls.scene  version.rc
App/models/: cube.fbx  sphere.fbx
App/shaders/: Basic.frag  Basic.vert  Bloom.comp  Cube.frag  Cube.vert  Fullscreen.frag  Fullscreen.vert  Grid.frag  Grid.vert  ImageLoadStore.comp  LaplaceEdgeDetection.comp  LaplaceEdgeDetection_Second.comp  LightCulling.comp  Line.frag  Line.vert  MatrixMultiply.comp  Predepth.vert  PreethamSky.comp  Quad.frag  Shadow.frag  Shadow.vert  Skybox.frag  Skybox.vert  SpotShadow.vert  Triangle.frag  Triangle.vert
App/shaders/include/: PBRUtility.glsl  ShaderResources.glsl  ShadowCalculation.glsl
App/widgets/: Widget.hpp
App/widgets/include/: FilesystemWidget.hpp  SceneWidget.hpp
App/widgets/inline/camera/: camera_type.inl
App/widgets/src/: FilesystemWidget.cpp  SceneWidget.cpp
Core/: CMakeLists.txt
Core/include/: AABB.hpp  Allocator.hpp  App.hpp  Buffer.hpp  BufferSet.hpp  Camera.hpp  Colours.hpp  CommandBuffer.hpp  CommandBufferThreadPool.hpp  CommandDispatcher.hpp  Concepts.hpp  Config.hpp  Containers.hpp  DataBuffer.hpp  DebugMarker.hpp  DescriptorMap.hpp  DescriptorResource.hpp  Destructors.hpp  Device.hpp  DynamicLibraryLoader.hpp  Ensure.hpp  Entry.hpp  Environment.hpp  Event.hpp  Exception.hpp  Filesystem.hpp  FilesystemListener.hpp  FiniteStateMachine.hpp  Formatters.hpp  Framebuffer.hpp  GIFTexture.hpp  GenericCache.hpp  GeometryRenderer.hpp  Image.hpp  ImageProperties.hpp  Input.hpp  InputCodes.hpp  Instance.hpp  InterfaceSystem.hpp  IterationDecision.hpp  (+24 more)
Core/include/bus/: IMessagingAPI.hpp  MessagingClient.hpp
Core/include/core/: Forward.hpp
Core/include/pch/: vkgpgpu_pch.hpp
Core/inline/: Destructors.inl  Logger.inl
Core/src/: Allocator.cpp  App.cpp  Buffer.cpp  Camera.cpp  CommandBuffer.cpp  DataBuffer.cpp  DebugMarker.cpp  DescriptorMap.cpp  DescriptorResource.cpp  Device.cpp  DynamicLibraryLoader.cpp  Environment.cpp  Formatters.cpp  Framebuffer.cpp  GIFTexture.cpp  GeometryRenderer.cpp  Image.cpp  Input.cpp  Instance.cpp  InterfaceSystem.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Pipeline.cpp  SceneRenderer.cpp  Shader.cpp  Swapchain.cpp  Texture.cpp  TextureCube.cpp  Timer.cpp  UI.cpp  Verify.cpp  Window.cpp
Core/src/post-processing-effects/: Bloom.cpp  LightCulling.cpp
ECS/: CMakeLists.txt
ECS/include/ecs/: Entity.hpp  Forward.hpp  ISceneObserver.hpp  Scene.hpp  UUID.hpp
ECS/include/ecs/components/: Component.hpp
ECS/include/ecs/messages/: EntityEvents.hpp  Message.hpp  SceneEvents.hpp
ECS/include/ecs/serialisation/: GeneralBinarySerialisers.hpp  SceneSerialiser.hpp  Serialisers.hpp
ECS/src/ecs/: Entity.cpp  Scene.cpp
ECS/src/ecs/components/: Component.cpp
ECS/src/ecs/serialisation/: BinarySerialisers.cpp  SceneSerialiser.cpp  Serialisers.cpp
Platform/: CMakeLists.txt
Platform/include/platform/: Forward.hpp
Platform/linux/include/: Loader.hpp
Platform/linux/src/: Loader.cpp  PlatformConfig.cpp  PlatformUI.cpp
Platform/rabbitmq/: RabbitMQMessagingAPI.cpp  RabbitMQMessagingAPI.hpp
Platform/windows/include/: Loader.hpp
Platform/windows/src/: FilesystemWatcher.cpp  Loader.cpp  PlatformConfig.cpp  PlatformUI.cpp
Reflection/: CMakeLists.txt
Reflection/include/reflection/: Forward.hpp  ReflectionData.hpp  Reflector.hpp
Reflection/src/reflection/: Reflector.cpp
ShaderCompilation/: CMakeLists.txt
ShaderCompilation/include/compilation/: Forward.hpp  ShaderCompiler.hpp
ShaderCompilation/include/reflection/: Forward.hpp
ShaderCompilation/src/compilation/: ShaderCompiler.cpp
ShaderCompilation/src/reflection/: Reflector.cpp
Test/: CMakeLists.txt
Test/common/: device_mock.hpp  instance_mock.hpp  window_mock.hpp
Test/integration/command_buffer_thread_pool/: command_buffer_thread_pool_test.cpp
Test/units/aabb/: aabb_tests.cpp
Test/units/bus/: bus_test.cpp
Test/units/containers/: circular_buffer_test.cpp  combine_into_one.cpp
Test/units/data_buffer/: data_buffer_tests.cpp
Test/units/fsm/: finite_state_machine_tests.cpp
Test/units/generic_cache/: texture_cache_tests.cpp
Test/units/image/: construct_image.cpp  mip_generation.cpp
Test/units/serialisation/: scene_serialisation_test.cpp
